import public "base.proto";
import public "unit.proto";
import public "user.proto";

package bbproto;

enum EFriendState{
	ISFRIEND		= 1; // is already friend
	FRIENDOUT		= 2; // I request add one as friend
	FRIENDIN		= 3; // others request add me as friend
	FRIENDHELPER	= 4; // friends allocated by system  
}

message FriendData {
	optional uint32			userId				= 1;
	optional EFriendState	friendState			= 2; 
	optional uint32			friendStateUpdate 	= 3; // friend state updated time
}

message FriendInfo {
	optional uint32			userId				= 1;
	optional string 		nickName			= 2;
	optional int32			rank				= 3;
	optional uint32			lastPlayTime		= 4;
	optional EFriendState	friendState			= 5; // 
	optional uint32			friendStateUpdate 	= 6; // friend state updated time
	optional int32			friendPoint			= 7;
	optional UserUnit		unit				= 8;
}

message FriendList {
	repeated FriendInfo		friend				= 1;
	repeated FriendInfo		helper				= 2;
	repeated FriendInfo		friendIn			= 3;
	repeated FriendInfo		friendOut			= 4;
}

//-------------------------------------------------
message ReqGetFriend {
	optional ProtoHeader	header				= 1;
	optional bool			getFriend			= 2;
	optional bool			getHelper			= 3;
}

message RspGetFriend {
	optional ProtoHeader	header				= 1;
	optional FriendList		friends				= 2;
}

//-------------------------------------------------
message ReqFindFriend {
	optional ProtoHeader	header				= 1;
	optional uint32			friendUid			= 2;
}

message RspFindFriend {
	optional ProtoHeader	header				= 1;
	optional UserInfo		friend				= 2;
}

//-------------------------------------------------
message ReqAddFriend {
	optional ProtoHeader	header				= 1;
	optional uint32			friendUid			= 2;
}

message RspAddFriend {
	optional ProtoHeader	header				= 1;
	optional FriendList		friends				= 2;	
}

//-------------------------------------------------
message ReqDelFriend {
	optional ProtoHeader	header				= 1;
	repeated uint32			friendUid			= 2;
}

message RspDelFriend {
	optional ProtoHeader	header				= 1;
	optional FriendList		friends				= 2;
}

//-------------------------------------------------
message ReqAcceptFriend {
	optional ProtoHeader	header				= 1;
	optional uint32			friendUid			= 2;
}

message RspAcceptFriend {
	optional ProtoHeader	header				= 1;
	optional FriendList		friends				= 2;	
}
//-------------------------------------------------
message ReqFriendMaxExpand {
	optional ProtoHeader	header				= 1;
}

message RspFriendMaxExpand {
	optional ProtoHeader	header				= 1;
	optional int32			friendMax			= 2;	
}
